[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NREL-erad"
dynamic = ["version"]
description = "Graph based scalable tool for computing energy resilience metrics for distribution systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Aadil Latif", email = "aadil.altif@nrel.gov" },
    { name = "Kapil Duwadi", email = "kapil.duwadi@nrel.gov" },
    { name = "Kwami Sedzro", email = "sherinann.abraham@nrel.gov" },
    { name = "Sherin Ann Abraham", email = "kwami.sedzro@nrel.gov" },
    { name = "Bryan Palmintier", email = "bryan.palmintier@nrel.gov" },
]
maintainers = [
    { name = "Aadil Latif", email = "Aadil.Latif@nrel.gov" },
]
keywords = [
    "Distribution",
    "Earthquake",
    "Energy",
    "Fire",
    "Flooding",
    "Power",
    "Python",
    "Resilience",
    "Systems",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "grid-data-models==2.3.7",
    "gdmloader",
    "geopandas",
    "requests",
    "elevation",
    "shapely",
    "pandas",
    "pyhigh",
    "geopy",
    "scipy",
    "sqlmodel",
    "loguru>=0.7.0",
    "mcp>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0"
]



[project.optional-dependencies]
dev = [
    "black",
    "mkdocs",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff"
]
doc = [
  "sphinx",
  "pydata-sphinx-theme",
  "myst-parser",
  "autodoc_pydantic",
  "sphinxcontrib-mermaid",
  "jupyter-book==2.1.6",
]

[project.urls]
Homepage = "https://github.com/NLR-Distribution-Suite/erad"

[project.scripts]
erad = "erad.cli:main"
erad-mcp = "erad.mcp:main"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "_build",
  "build",
  "dist",
  "env",
  "venv",
]
ignore-init-module-imports = true
line-length = 99
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
  "C901", # McCabe complexity
  "E4",   # Subset of pycodestyle (E)
  "E7",
  "E9",
  "F",    # Pyflakes
  "W",    # pycodestyle warnings
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.setuptools.dynamic]
version = {attr = "erad.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

